--- a/src/pages/countries/Countries.module.css
+++ b/src/pages/countries/Countries.module.css
@@ -6,6 +6,6 @@
 }
 
 .mapWrapper {
-  height: 500px;
   width: 100%;
+  aspect-ratio: 73 / 37;
 }
